--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+attrs==21.2.0
+backcall==0.2.0
 cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
+chromedriver-py==95.0.4638.17
+decorator==5.1.0
 google-api-core==2.2.2
 google-api-python-client==2.31.0
 google-auth==2.3.3
@@ -9,17 +13,40 @@ google-auth-oauthlib==0.4.6
 googleapis-common-protos==1.53.0
 httplib2==0.20.2
 idna==3.3
+importlib-metadata==4.8.2
+iniconfig==1.1.1
+ipython==7.16.1
+ipython-genutils==0.2.0
+jedi==0.18.1
 oauthlib==3.1.1
+packaging==21.3
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
 pkg-resources==0.0.0
+pluggy==1.0.0
+prompt-toolkit==3.0.22
 protobuf==3.19.1
+ptyprocess==0.7.0
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+Pygments==2.10.0
 pyparsing==3.0.6
+pytest==6.2.5
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
 requests-oauthlib==1.3.0
+responses==0.16.0
 rsa==4.8
+selenium==3.141.0
 six==1.16.0
+toml==0.10.2
+traitlets==4.3.3
+typing-extensions==4.0.0
 uritemplate==4.1.1
 urllib3==1.26.7
+-e git+git@github.com:gitDew/vindobot.git@2c0d976aaf758e0f4e1d611b5279d26627c7bf92#egg=vindobot
+wcwidth==0.2.5
+zipp==3.6.0
